docs: valider officiellement M1